5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1764_1580.log
== SUBMITION (2019-05-28 16:47:48) 
-- CODE:
from numpy import*

alunos = array(eval(input("alunos:")))
nota = array(eval(input("notas:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] = -1.0):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] <= 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota))
		maiornota =alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- EXECUTION TIME:
0.168739
-- ERROR:
  File "/home/codebench/codes/1764/1580/main.py", line 13
    if ( nota[i] = -1.0):
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:56:16) 
-- CODE:
from numpy import*

alunos = array(eval(input("alunos:")))
nota = array(eval(input("notas:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] = -1.0):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota))
		maiornota =alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- ERROR:
File "XXXX", line 13
    if ( nota[i] = -1.0):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:56:27) 
-- CODE:
from numpy import*

alunos = array(eval(input("alunos:")))
nota = array(eval(input("notas:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1.0):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota))
		maiornota =alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- EXECUTION TIME:
0.149415
-- ERROR:
  File "/home/codebench/codes/1764/1580/main.py", line 25
    if (nota[i] == max(nota))
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:56:27) 
-- CODE:
from numpy import*

alunos = array(eval(input("alunos:")))
nota = array(eval(input("notas:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1.0):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota))
		maiornota =alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- ERROR:
File "XXXX", line 25
    if (nota[i] == max(nota))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:56:46) 
-- CODE:
from numpy import*

alunos = array(eval(input("alunos:")))
nota = array(eval(input("notas:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1.0):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota =alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:57:16) 
-- CODE:
from numpy import*

alunos = array(eval(input("alunos:")))
nota = array(eval(input("notas:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1.0):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota =alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:57:16) 
-- CODE:
from numpy import*

alunos = array(eval(input("alunos:")))
nota = array(eval(input("notas:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1.0):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota =alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:58:42) 
-- CODE:
from numpy import*

alunos = array(eval(input("alunos:")))
nota = array(eval(input("notas:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1.0):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota =alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- EXECUTION TIME:
0.360484
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 17, in <module>
    if( 6 >= nota[i] <= 10 ):
TypeError: unorderable types: int() >= numpy.str_()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:58:50) 
-- CODE:
from numpy import*

alunos = array(eval(input("alunos:")))
nota = array(eval(input("notas:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1.0):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:58:50) 
-- CODE:
from numpy import*

alunos = array(eval(input("alunos:")))
nota = array(eval(input("notas:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1.0):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- EXECUTION TIME:
0.435619
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 17, in <module>
    if( 6 >= nota[i] <= 10 ):
TypeError: unorderable types: int() >= numpy.str_()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:58:51) 
-- CODE:
from numpy import*

alunos = array(eval(input("alunos:")))
nota = array(eval(input("notas:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1.0):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- EXECUTION TIME:
0.843249
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 17, in <module>
    if( 6 >= nota[i] <= 10 ):
TypeError: unorderable types: int() >= numpy.str_()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:58:58) 
-- CODE:
from numpy import*

alunos = array(eval(input("alunos:")))
nota = array(eval(input("notas:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1.0):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:02:10) 
-- CODE:
from numpy import*

alunos = array(eval(input("alunos:")))
nota = array(eval(input("notas:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:02:12) 
-- CODE:
from numpy import*

alunos = array(eval(input("alunos:")))
nota = array(eval(input("notas:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- EXECUTION TIME:
0.36878
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 17, in <module>
    if( 6 >= nota[i] <= 10 ):
TypeError: unorderable types: int() >= numpy.str_()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:02:13) 
-- CODE:
from numpy import*

alunos = array(eval(input("alunos:")))
nota = array(eval(input("notas:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:02:14) 
-- CODE:
from numpy import*

alunos = array(eval(input("alunos:")))
nota = array(eval(input("notas:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- EXECUTION TIME:
0.659291
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 17, in <module>
    if( 6 >= nota[i] <= 10 ):
TypeError: unorderable types: int() >= numpy.str_()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:02:51) 
-- CODE:
from numpy import*

alunos = array(eval(input("alunos:")))
nota = array(eval(input("notas:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:02:51) 
-- CODE:
from numpy import*

alunos = array(eval(input("alunos:")))
nota = array(eval(input("notas:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- EXECUTION TIME:
0.554498
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 17, in <module>
    if( 6 >= nota[i] <= 10 ):
TypeError: unorderable types: int() >= numpy.str_()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:03:35) 
-- CODE:
from numpy import*

nota = array(eval(input("alunos:")))
aluno = array(eval(input("notas:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:03:49) 
-- CODE:
from numpy import*

nota = array(eval(input("alunos:")))
aluno = array(eval(input("notas:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:04:11) 
-- CODE:
from numpy import*

nota = array(eval(input("nota:")))
aluno = array(eval(input("aluno:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:05:08) 
-- CODE:
from numpy import*

nota = array(eval(input("nota:")))
aluno = array(str(input("aluno:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:22:40) 
-- CODE:
from numpy import*

nota = array(eval(input("nota:")))
aluno = array(eval(input("aluno:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:24:13) 
-- CODE:
from numpy import*

nota = array(eval(input("nota:")))
aluno = array(eval(input("aluno:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:28:03) 
-- CODE:
from numpy import*

nota = array(eval(input("nota:")))
aluno = array(eval(input("aluno:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	i = i + 1	
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:28:11) 
-- CODE:
from numpy import*

nota = array(eval(input("nota:")))
aluno = array(str(input("aluno:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- EXECUTION TIME:
1373.69
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:28:12) 
-- CODE:
from numpy import*

nota = array(eval(input("nota:")))
aluno = array(eval(input("aluno:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	i = i + 1	
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- EXECUTION TIME:
3.29271
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 26, in <module>
    maiornota = alunos[i]
NameError: name 'alunos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:28:13) 
-- CODE:
from numpy import*

nota = array(eval(input("nota:")))
aluno = array(eval(input("aluno:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	i = i + 1	
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:30:36) 
-- CODE:
from numpy import*

nota = array(eval(input("nota:")))
aluno = array(eval(input("aluno:")))
print(nota)
print(aluno)
faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = aluno[i]
	i = i + 1	
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:31:22) 
-- CODE:
from numpy import*

nota = array(eval(input("nota:")))
aluno = array(eval(input("aluno:")))
print(nota)
print(type(nota))
faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = aluno[i]
	i = i + 1	
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:32:26) 
-- CODE:
from numpy import*

nota = array(eval(input("nota:")))
aluno = array(eval(input("aluno:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = aluno[i]
	i = i + 1	
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltaram)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:32:38) 
-- CODE:
from numpy import*

nota = array(eval(input("nota:")))
aluno = array(eval(input("aluno:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = aluno[i]
	i = i + 1	
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltaram)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- EXECUTION TIME:
5.73883
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
9
3
1.25
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
nota:aluno:6
11
6
0.29
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
nota:aluno:0
4
1
2.07
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:34:03) 
-- CODE:
from numpy import*

nota = array(eval(input("nota:")))
aluno = array(eval(input("aluno:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 <= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = aluno[i]
	i = i + 1	
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltaram)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:35:10) 
-- CODE:
from numpy import*

nota = array(eval(input("nota:")))
aluno = array(eval(input("aluno:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 <= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = aluno[i]
	i = i + 1	
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltaram)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- EXECUTION TIME:
3.5009
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
3
3.86
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
6
-1.0
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
1
7.5
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:35:59) 
-- CODE:
from numpy import*

nota = array(eval(input("nota:")))
aluno = array(eval(input("aluno:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 <= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 <= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = aluno[i]
	i = i + 1	
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltaram)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:38:47) 
-- CODE:
from numpy import*

nota = array(eval(input("nota:")))
aluno = array(eval(input("aluno:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 <= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 <= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = aluno[i]
	i = i + 1	
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltaram)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- EXECUTION TIME:
3.98674
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:51:04) 
-- CODE:
from numpy import*

nota = array(eval(input("nota:")))
aluno = array(eval(input("aluno:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- EXECUTION TIME:
2.58827
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 26, in <module>
    maiornota = alunos[i]
NameError: name 'alunos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:51:05) 
-- CODE:
from numpy import*

nota = array(eval(input("nota:")))
aluno = array(eval(input("aluno:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- EXECUTION TIME:
4.99058
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 26, in <module>
    maiornota = alunos[i]
NameError: name 'alunos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:51:05) 
-- CODE:
from numpy import*

nota = array(eval(input("nota:")))
aluno = array(eval(input("aluno:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- EXECUTION TIME:
2.22228
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 26, in <module>
    maiornota = alunos[i]
NameError: name 'alunos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:51:05) 
-- CODE:
from numpy import*

nota = array(eval(input("nota:")))
aluno = array(eval(input("aluno:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- EXECUTION TIME:
2.30548
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 26, in <module>
    maiornota = alunos[i]
NameError: name 'alunos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:52:10) 
-- CODE:
from numpy import*

nota = array(eval(input("nota:")))
aluno = array(eval(input("aluno:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- EXECUTION TIME:
5.18666
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 26, in <module>
    maiornota = alunos[i]
NameError: name 'alunos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:52:10) 
-- CODE:
from numpy import*

nota = array(eval(input("nota:")))
aluno = array(str(input("aluno:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 >= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 >= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = alunos[i]
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltou)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- EXECUTION TIME:
1.17864
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 26, in <module>
    maiornota = alunos[i]
NameError: name 'alunos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:44:44) 
-- CODE:
from numpy import*

nota = array(eval(input("nota:")))
aluno = array(eval(input("aluno:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 <= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 <= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = aluno[i]
	i = i + 1	
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltaram)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)
	

	
	
-- EXECUTION TIME:
0.452548
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
